; ModuleID = '/home/carl/AnghaBench/freebsd/tools/regression/security/proc_to_proc/extr_scenario.c_enact_scenarios.c'
source_filename = "/home/carl/AnghaBench/freebsd/tools/regression/security/proc_to_proc/extr_scenario.c_enact_scenarios.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@scenarios_count = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [15 x i8] c"enact_scenario\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @enact_scenarios() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  store i32 0, i32* %1, align 4
  br label %3

3:                                                ; preds = %15, %0
  %4 = load i32, i32* %1, align 4
  %5 = load i32, i32* @scenarios_count, align 4
  %6 = icmp slt i32 %4, %5
  br i1 %6, label %7, label %18

7:                                                ; preds = %3
  %8 = load i32, i32* %1, align 4
  %9 = call i32 @enact_scenario(i32 %8)
  store i32 %9, i32* %2, align 4
  %10 = load i32, i32* %2, align 4
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %12, label %14

12:                                               ; preds = %7
  %13 = call i32 @perror(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0))
  br label %14

14:                                               ; preds = %12, %7
  br label %15

15:                                               ; preds = %14
  %16 = load i32, i32* %1, align 4
  %17 = add nsw i32 %16, 1
  store i32 %17, i32* %1, align 4
  br label %3

18:                                               ; preds = %3
  ret void
}

declare dso_local i32 @enact_scenario(i32) #1

declare dso_local i32 @perror(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
